# nback

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: release.yaml
src/: asset.rs  config.rs  game.rs  gui.rs  lib.rs  main.rs  menu.rs  nback.rs  palette.rs  shape.rs  splash.rs  state.rs  tile.rs  world.rs
src/game/: button.rs  core.rs  gui.rs  input.rs  mod.rs  nback.rs  score.rs  settings.rs  tile.rs  ui.rs
src/game/core/: answer.rs  cue.rs  mod.rs  round.rs  score.rs  state.rs
src/game/tile/: color.rs  mod.rs  position.rs  sound.rs
src/game/ui/: button.rs  mod.rs  text.rs
src/menu/: button.rs  checkbox.rs  gui.rs  mod.rs  text.rs  ui.rs
src/splash/: mod.rs
