[package]
name = "nback"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.13.1" }
bevy_egui = { version = "0.26.0", default-features = false, features = [
    "open_url",
    "default_fonts",
    "render",
] }
bevy_kira_audio = "0.19.0"
image = "0.25.0"
rand = "0.8.5"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
